Fixed title container stuttering on mobile

--- a/personal-website/src/App.scss
+++ b/personal-website/src/App.scss
@@ -91,6 +91,7 @@ $blur-settings: blur(7px);
 
   h1 {
     font-size: 42px;
+    height: 150px;
 
     @media (max-width: 500px) {
       margin-top: 1em;
